# impactgen

./: .gitignore  .gitmodules  CMakeLists.txt
cmake/: FindNETCDF_Fortran.cmake  helpers.cmake
include/: AgentForcing.h  Forcing.h  ForcingSeries.h  GeoGrid.h  Output.h  ReferenceTime.h  TimeVariable.h  gpu_functions.h  helpers.h  netcdf_headers.h  netcdftools.h  settingsnode.h
include/impacts/: AgentImpact.h  AlphaBetaForcingPerSubregion.h  ExtremeTemperaturesPerSubregion.h  Flooding.h  GriddedImpact.h  HeatLaborProductivity.h  Impact.h  ParametersPerRegionHeatLaborProductivity.h  ProxiedImpact.h  RegionalizedHeatLaborProductivity.h  TropicalCyclones.h  WBGTHeatLaborProductivity.h
lib/cpp-library/: nvector.h  progressbar.h
lib/settingsnode/include/: settingsnode.h
src/: AgentForcing.cpp  GeoGrid.cpp  Output.cpp  ReferenceTime.cpp  TimeVariable.cpp  gpu_functions.cpp  helpers.cpp  main.cpp
src/calibration/: Dockerfile  README.md  compound-test.yml  config.yaml  framework.cpp  gp.py  init.sh  interface_pseudo.txt  te_preprocess.ipynb  test.cpp
src/impacts/: AgentImpact.cpp  AlphaBetaForcingPerSubregion.cpp  ExtremeTemperaturesPerSubregion.cpp  Flooding.cpp  GriddedImpact.cpp  HeatLaborProductivity.cpp  Impact.cpp  ParametersPerRegionHeatLaborProductivity.cpp  ProxiedImpact.cpp  RegionalizedHeatLaborProductivity.cpp  TropicalCyclones.cpp  WBGTHeatLaborProductivity.cpp
